# rice

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  release-plz.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
src/: lib.rs  main.rs
src/assets/ascii/: arch.txt  debian.txt  default.txt  fedora.txt  linux.txt  macos.txt
src/config/: defaults.rs  loader.rs  mod.rs
src/display/: ascii_art.rs  layout.rs  mod.rs  themes.rs
src/info/: custom.rs  hardware.rs  mod.rs  network.rs  software.rs  system.rs
src/utils/: terminal.rs
