[package]
name = "rice"
version = "2.0.0"
authors = ["Jorge Gonzalez <jorgegonzalez@users.noreply.github.com>"]
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
repository = "https://github.com/jorgegonzalez/rice"
documentation = "https://github.com/jorgegonzalez/rice"
homepage = "https://github.com/jorgegonzalez/rice"
readme = "README.md"
license = "MIT"
description = "🍚 A modern, feature-rich system information tool written in Rust"
keywords = ["system", "info", "neofetch", "cli", "terminal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = { version = "0.37", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
dirs = "5.0"
image = { version = "0.24", features = ["png", "jpeg"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["images"]
images = ["dep:image", "dep:base64"]

